Corrected bad Ajax query, reverting to original that had worked. Added filter for client list on manager dashboard view.

--- a/petowner/online/base-calendar.html
+++ b/petowner/online/base-calendar.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="per_sitting_businesses">
     <meta name="description" content="PetOwner PetCare Management | Health & Wellness.  ">
 
-    <link href='http://fonts.googleapis.com/css?family=Roboto:300italic,400italic,300,400,500,700,900' rel='stylesheet' type='text/css' />
+    <link href='https://fonts.googleapis.com/css?family=Roboto:300italic,400italic,300,400,500,700,900' rel='stylesheet' type='text/css' />
     <link type="text/css" rel="stylesheet" href="../../assets/css/leashtime-default/bootstrap.css?1422792965" />
     <link type="text/css" rel="stylesheet" href="../../assets/css/leashtime-default/materialadmin.css?1425466319" />
     <link type="text/css" rel="stylesheet" href="../../assets/css/leashtime-default/font-awesome.min.css?1422529194" />
