Pet owner login local, then get visits, surcharges, service types. Load the pop-calendar.html page

--- a/ProjectManagement/git-how-to.html
+++ b/ProjectManagement/git-how-to.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Material Admin - Login</title>
+		<title>Github LeashTime Projects</title>
 
 	</head>
 	<body>
+		<h1>Repositories</h1>
+		<ul>
+			<li><a href="https://github.com/teddyhoo/LeashTime-POP-Dash">Next generation LeashTime web assets</a></li>
+			<li><a href="https://github.com/teddyhoo/IOS-Sitter-Mobile">Sitter native mobile app (iOS)</a></li>
+			<li><a href="https://github.com/teddyhoo/Android-Sitter-Mobile">Sitter native mobile app (Android)</a></li>
+		</ul>
 		<h1>Manage github projects</h1>
 		<ol>
 			<li>git clone <em>[remote-repo-name]</em>
