fixed networking and popup for master visit report list fetch calls. popups work with markers on map.

--- a/email/visit-reports/evr-mail-default.html
+++ b/email/visit-reports/evr-mail-default.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>LEASHTIME CAREREPORTS&trade;</title>
+    <title> default LEASHTIME CAREREPORTS&trade;</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
     <style type="text/css">
         /* Outlines the grids, remove when sending */
