--- a/email/visit-reports/evr-mail-full.html
+++ b/email/visit-reports/evr-mail-full.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>LEASHTIME CAREREPORTS&trade;</title>
+    <title>mail full LEASHTIME CAREREPORTS&trade;</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
     <style type="text/css">
         /* Outlines the grids, remove when sending */
@@ -147,7 +147,7 @@
                     <table width="320" cellpadding="0" cellspacing="0" border="0" class="container">
                         <tr>
                             <td align="left" valign="top" style="padding-left:10px;">
-                                <span style="font-size: .7em"><b>CARE</b>REPORT&trade; PROVIDED BY:</span><br>
+                                <span style="font-size: .7em"><b>TESTER CARE</b>REPORT&trade; PROVIDED BY:</span><br>
                                 <span style="font-size: .9em;color:#1471af"><b>#ENHANCED_REPORT_BIZ_NAME#</b></span>
                             </td>
                         </tr>
