--- a/operations/managerapp/manager.html
+++ b/operations/managerapp/manager.html
@@ -197,26 +197,29 @@
         <li class="dropdown-progress">
           <a href="javascript:void(0);">
             <div class="dropdown-label">
-              <span id="numVisits" class="text-light">Total Visits <strong>TODAY</strong></span>
-              <strong class="pull-right">55%</strong>
+              <span class="text-light">TOTAL VISITS<strong>TODAY</strong></span>
+              <strong id="numTotal" class="pull-right"></strong>
             </div>
-            <div class="progress"><div class="progress-bar progress-bar-info" style="width: 74%"></div></div>
+            <div class="progress">
+                <div class="progress-bar progress-bar-warning" style="width: 44%"></div>
+            </div>
           </a>
         </li>
         <li class="dropdown-progress">
           <a href="javascript:void(0);">
             <div class="dropdown-label">
-              <span class="text-light">LATE VISITS <strong>TODAY</strong></span>
-              <strong class="pull-right">74%</strong>
+              <span class="text-light">LATE VISITS </span>
+              <strong id="numLatePercent" class="pull-right"></strong>
             </div>
-            <div class="progress"><div class="progress-bar progress-bar-warning" style="width: 44%"></div></div>
+            <div class="progress">
+                <div class="progress-bar progress-bar-warning" id="progLate" style="width: 44%"></div></div>
           </a>
         </li>
         <li class="dropdown-progress">
           <a href="javascript:void(0);">
             <div class="dropdown-label">
-              <span class="text-light">Services Goals <strong>CANCELLED</strong></span>
-              <strong class="pull-right">13%</strong>
+              <span class="text-light"><strong>CANCELLED</strong></span>
+              <strong id="cancelPercent" class="pull-right">33</strong>
             </div>
             <div class="progress"><div class="progress-bar progress-bar-danger" style="width: 13%"></div></div>
           </a>
@@ -224,11 +227,20 @@
         <li class="dropdown-progress">
           <a href="javascript:void(0);">
             <div class="dropdown-label">
-              <span class="text-light">Service Reports <strong>SEND TODAY</strong></span>
-              <strong class="pull-right">30%</strong>
+              <span class="text-light"><strong>VISIT REPORTS TO REVIEW</strong></span>
+              <strong id="numVRpercent" class="pull-right"></strong>
             </div>
-            <div class="progress"><div class="progress-bar progress-bar-success" style="width: 30%"></div></div>
+            <div class="progress"><div id="vrReviewBar" class="progress-bar progress-bar-success" style="width: 30%"></div></div>
           </a>
+        </li>
+         <li class="dropdown-progress">
+              <a href="javascript:void(0);">
+                <div class="dropdown-label">
+                  <span class="text-light"><strong>PUBLISHED VISIT REPORTS</strong></span>
+                  <strong id="numVRsentPercent" class="pull-right"></strong>
+                </div>
+                <div class="progress"><div id="vrSentBar" class="progress-bar progress-bar-success" style="width: 30%"></div></div>
+              </a>
         </li>
       </ul>
       </li>
