Refactored accordion code and added the tab detail view. The detail view tabs do not work properly.

--- a/operations/managerapp/manager.html
+++ b/operations/managerapp/manager.html
@@ -428,24 +428,13 @@
 <script src="../../assets/js/libs/nanoscroller/jquery.nanoscroller.min.js"></script> 
 <script src="../../assets/js/libs/jquery/jquery-migrate-1.2.1.min.js"></script>
 <script src="../../assets/js/libs/bootstrap/bootstrap.min.js"></script>
-<script src="../../assets/js/libs/moment/moment.min.js"></script>
-<!--<script src="../../assets/js/core/source/AppNavigation.js"></script>-->
-<!--<script src="../../assets/js/leashtime/LeashtimeOffcanvas.js"></script>-->
 
+<script src="../../assets/js/core/source/App.js"></script>
+<script src="../../assets/js/core/source/AppVendor.js"></script>
+<script src="../../assets/js/libs/moment/moment.js"></script>
 
-<!-- BEGIN JAVASCRIPT -->
-<script src="./assets/js/leashtime/App.js"></script>
-<!--
-		<script src="./assets/js/leashtime/AppNavigation.js"></script>
--->
-<script src="./assets/js/leashtime/AppOffcanvas.js"></script>
-<script src="./assets/js/leashtime/AppCard.js"></script>
-<!--
-		<script src="./assets/js/leashtime/AppForm.js"></script>
-		<script src="./assets/js/leashtime/AppNavSearch.js"></script>
-		<script src="./assets/js/leashtime/AppVendor.js"></script>
-<script src="./assets/js/leashtime/lt-cards.js"></script>-->
-
+<script src="../../assets/js/core/source/AppOffcanvas.js"></script>
+<script src="../../assets/js/core/source/AppCard.js"></script>
 <script src="./assets/js/lTmanagerapp.js"></script>
 
   </body>
