Fixed Ajax sync from server version.

--- a/operations/managerapp/manager.html
+++ b/operations/managerapp/manager.html
@@ -26,6 +26,7 @@
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.css' rel='stylesheet' />
     <script src="https://unpkg.com/@mapbox/mapbox-sdk/umd/mapbox-sdk.js"></script>
     <script src="https://unpkg.com/@mapbox/mapbox-sdk/umd/mapbox-sdk.min.js"></script>
+    <script src='https://api.mapbox.com/mapbox.js/plugins/turf/v3.0.11/turf.min.js'></script>
 </head>
 <!--<body class="header-fixed">-->
 
@@ -127,8 +128,8 @@
                             <div class="section-body">
                                 <div class="card style-info force-padding">
                                     <span class="text-small">
-                                      <input type="text" value="teddy123" id="userName" name="username" class="full-bleed text-center text-default">
-                                      <input type="text" value="teddy123" id="passWord" name="password" class="full-bleed text-center text-default">
+                                      <input type="text" value="" id="userName" name="username" class="full-bleed text-center text-default">
+                                      <input type="text" value="" id="passWord" name="password" class="full-bleed text-center text-default">
                                       <button type = "button" id="login" class="btn btn-block btn-info m-t-10 darken-2  btn-raised"  onClick=managerApp.login()>LOGIN</button>
                                     </span>
                                 </div>
