POP updates and changes now Ajax

--- a/petowner/leashtime-login.html
+++ b/petowner/leashtime-login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Material Admin - Login</title>
+		<title>Pet Parent Portal - Login</title>
 
 		<!-- BEGIN META -->
 		<meta charset="utf-8">
@@ -21,12 +21,6 @@
 		<link type="text/css" rel="stylesheet" href="../assets/css/leashtime-theme/layout.css" />
 		<link type="text/css" rel="stylesheet" href="../assets/css/leashtime-theme/colors.css" />
 		<link type="text/css" rel="stylesheet" href="../assets/css/leashtime-theme/vivify.min.css" />
-		<!-- END STYLESHEETS -->
-		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-		<!--[if lt IE 9]>
-		<script type="text/javascript" src=" ./assets/js/libs/utils/html5shiv.js?1403934957"></script>
-		<script type="text/javascript" src=" ./assets/js/libs/utils/respond.min.js?1403934956"></script>
-		<![endif]-->
 	</head>
 	
 	<body class="header-fixed">
@@ -50,42 +44,6 @@
 		<!-- BEGIN LOGIN SECTION -->
 		<div class="col-sm-12 col-md-8">
 		<section class="section-account">
-<!--
-<header id="" class="">
-  <div class="headerbar blue ">
-   <div class="headerbar-right">
-   <ul class="header-nav header-nav-options">
-     <li id="messages" class="dropdown hidden-xs">
-      <a href="javascript:void(0);" class="btn btn-icon-toggle btn-default" data-toggle="dropdown" aria-expanded="false">
-        <i class="fa fa-bell white-text"></i>
-      </a>
-      <ul class="dropdown-menu animation-expand">
-        <li class="dropdown-header">Today's messages</li>
-        <li>
-          <a class="alert alert-callout alert-warning" href="javascript:void(0);">
-            <img class="pull-right img-circle dropdown-avatar" src="./img/avatar2.jpg?1404026449" alt="">
-            <strong>Teddy Bun Panda</strong><br>
-            <small>Testing functionality...</small>
-          </a>
-        </li>
-        <li>
-          <a class="alert alert-callout alert-info" href="javascript:void(0);">
-            <img class="pull-right img-circle dropdown-avatar" src="./img/avatar3.jpg?1404026799" alt="">
-            <strong>Jody Sparkles</strong><br>
-            <small>Reviewing last changes...</small>
-          </a>
-        </li>
-        <li class="dropdown-header">Options</li>
-        <li><a href="#">View all messages <span class="pull-right"><i class="fa fa-arrow-right"></i></span></a></li>
-        <li><a href="#">Mark as read <span class="pull-right"><i class="fa fa-arrow-right"></i></span></a></li>
-      </ul>
-    </li>
-     </ul>
-    </div>
-  </div>
-</header>
--->
-			
 			<div class="card contain-sm style-transparent">
 				<div class="card-body">
 					<div class="row">
@@ -108,7 +66,7 @@
 							<br/>
 							<span class="text-lg text-bold text-primary">LEASHTIME PET OWNER LOGIN</span>
 							<br/><br/>
-							<form class="form floating-label" action="javascript:LT.loginPetOwnerPortalAjax(this)" accept-charset="utf-8" method="get">
+							<form class="form floating-label" action="javascript:LT.loginPetOwner(this)" accept-charset="utf-8" method="get">
 								<div class="form-group">
 									<input type="text" class="form-control" id="username" name="username" value="carbarone">
 									<label for="username">Username</label>
