Date module refactored to separate. Gallery JS. Integration of Visit Report API endpoint and display visit report elements.

--- a/petowner/online/gallery.html
+++ b/petowner/online/gallery.html
@@ -25,6 +25,9 @@
 	<!-- nanogallery2 -->
 	<link  href="https://unpkg.com/nanogallery2@2.3.0/dist/css/nanogallery2.min.css" rel="stylesheet" type="text/css">
 	<script  type="text/javascript" src="https://unpkg.com/nanogallery2@2.3.0/dist/jquery.nanogallery2.min.js"></script>
+    <script src='../assets/js/LT.js'></script>
+    <script src='../assets/js/LTDateLib.js'></script> 
+    <script src='../assets/js/LeashtimeGallery-Nano.js'></script> 
 
 </head>
 
