--- a/petowner/online/pop-calendar.html
+++ b/petowner/online/pop-calendar.html
@@ -28,6 +28,7 @@
   <script src='../../assets/js/libs/fullcalendar-4.0.0/packages/list/main.js'></script>
   <script src='../../assets/js/libs/fullcalendar-4.0.0/packages/daygrid/main.js'></script>
   <script src='../assets/js/LT.js'></script>
+  <script src='../assets/js/LTDateLib.js'></script>
   <script src='../assets/js/LeashtimeCalendar4-0.js'></script>
 </head>
 
