--- a/ProjectManagement/LeashTime-API.html
+++ b/ProjectManagement/LeashTime-API.html
@@ -26,7 +26,7 @@
 
 <div class="panel-group">
     <div class="card panel">
-        <div class="card-head card-head-sm">Mobile Manager Dashboard (MMD) API</div>
+        <div class="card-head card-head-sm"><h2>Mobile Manager Dashboard (MMD) API</h2></div>
             <header>Scripts</header>
             <ul>
                 <li>https://leashtime.com/mmd-login.php
@@ -37,14 +37,14 @@
                 <li>This API is session based.  That is, it requires a login by a manager or dispatcher initially, but for later requests a session ID needs to be supplied by the browser (via request header, I imagine) for security and context.
             </ul>
             <div class="card-body small-padding">
-                <p>mmd-login.php</p>
-                <p>parameters:</p>
+                <h3>mmd-login.php</h3>
+                    <p>parameters:</p>
                         <ul>
                             <li>user_name
                             <li>user_pass
                             <li>expected_role = m (an owner or dispatcher), p (a provider, or sitter), c (a client)
                         </ul>  
-                <p> returns:</p>
+                    <p> returns:</p>
                         <ul>
                             <li>status: 'ok' or 'failed'
                             <li>failurecode: only on failure, single character (see below)
@@ -69,19 +69,18 @@
                         </ul>
             </div>
             <div class="card-body small-padding">
-                <p>mmd-sitters.php</p>
-                <p>parameters</p>
+                <h3>mmd-sitters.php</h3>
+                    <p>parameters</p>
                         <ul>
                             <li>activeOnly: (optional) 1 or 0.  When 1, only active sitters are included in the results.
                         returns JSON with keys:
                         </ul>
-                <p>returns:</p>
+                    <p>returns:</p>
                         <ul>
                             <li>sittercount: number of sitters returned
                             <li>sitters: array of sitter objects
                         </ul>
-                <p>sitter example:
-
+                    <p>sitter example:
                         providerid    "1345"<br>
                         sitter    "System Admin" -- this is the sitter's nickname, or the sitter's full name if no nickname is supplied<br>
                         fname    "System"<br>
@@ -95,7 +94,6 @@
                         lon    "-77.0464"<br>
             </div>
             <div class="card-body small-padding">
-
                 <h3>mmd-clients.php</h3>
                     <p>This script returns a list of clients for the client IDs supplied.  Use the changedsince option if you need only clients that have been updated.
 
@@ -121,19 +119,19 @@
                                 client id: "12345"
             </div>
             <div class="card-body small-padding">
-                <p>mmd-visits.php</p>
-                <p>This script returns a list of visits and times off for the dates supplied.  Times off may be omitted with withtimeoff=0.  Visits can be filtered by sitters and clients.  Visit list is sortable.
+                <h3>mmd-visits.php</h3>
+                    <p>This script returns a list of visits and times off for the dates supplied.  Times off may be omitted with withtimeoff=0.  Visits can be filtered by sitters and clients.  Visit list is sortable.
 
-                <p>parameters</p>
-                    <ul>
-                        <li>start - start date formatted YYYY-mm-dd
-                        <li>end - end date formatted YYYY-mm-dd
-                        <li>withtimeoff - OPTIONAL, when "1", include sitter time off instances, default: "1"
-                        <li>sitterids - OPTIONAL, comma-separated list of sitter IDs, return ONLY items for sitters indicated
-                        <li>clientids - OPTIONAL, comma-separated list of client IDs, return ONLY visits for clients indicated
-                        <li>sortby  - OPTIONAL, sitter|client|time, default: "time"
-                    </ul>
-                <p>returns</p>
+                    <p>parameters</p>
+                        <ul>
+                            <li>start - start date formatted YYYY-mm-dd
+                            <li>end - end date formatted YYYY-mm-dd
+                            <li>withtimeoff - OPTIONAL, when "1", include sitter time off instances, default: "1"
+                            <li>sitterids - OPTIONAL, comma-separated list of sitter IDs, return ONLY items for sitters indicated
+                            <li>clientids - OPTIONAL, comma-separated list of client IDs, return ONLY visits for clients indicated
+                            <li>sortby  - OPTIONAL, sitter|client|time, default: "time"
+                        </ul>
+                    <p>returns</p>
                     <ul>
                         <li>[] if no visits (or times off) found
                         <li>else array of visit and timeoff objects
@@ -141,15 +139,15 @@
                         <li>visit objects are very similar to the rich visit objects returned by native-provider-multiday.php, but they also include "clientdisplay", the preferred mode of representing a client, which may include all petnames
                     </ul>
                     <p>
-                <p>error handling:</p>
-                    <ul>
-                        <li>error object returned, e.g., {"error":    "start parameter is required"} when
-                        <li>start parameter omitted
-                        <li>start parameter invalid
-                        <li>end parameter omitted
-                        <li>end parameter invalid
-                        <li>sortby parameter is supplied, but invalid
-                    </ul>
+                    <p>error handling:</p>
+                        <ul>
+                            <li>error object returned, e.g., {"error":    "start parameter is required"} when
+                            <li>start parameter omitted
+                            <li>start parameter invalid
+                            <li>end parameter omitted
+                            <li>end parameter invalid
+                            <li>sortby parameter is supplied, but invalid
+                        </ul>
             </div>
             <div class="card-body small-padding">
 
@@ -180,7 +178,14 @@
     </div>
 
     <div class="card panel">
-        <div class="card-head card-head-sm">Pet Owner Requests</div>
+        <div class="card-head card-head-sm"><h2>Pet Owner Requests</h2></div>
+            <div class="card-body small-padding">   
+                <h3>pop-login.php</h3>
+                    <ul>
+                        <li>user_name</li>
+                        <li>user_pass</li>
+                    </ul>
+            </div>
             <div class="card-body small-padding">   
                 <h3>client-own-scheduler-data.php</h3>
                     <p>You must be logged in as a client to use this script.
@@ -226,228 +231,22 @@
             </div>
         </div>
     </div>
-    
 
-            <h3>native-log-change.php</h3>
-                <p>log a change from the native sitter app
-            <h4>parameters:</h4>
-                <ul>
-                    <li>loginid
-                    <li>password
-                    <li>type -- for visit, "tblappointment" is recommended.
-                    <li>id -- for visit, this would be the visit ID (appointmentid)
-                    <li>operation -- one character.  'e' (for event) is recommended
-                    <li>note - string, 255 chars max
-                </ul>
-
-                <p>https://leashtime.com/native-log-change.php?loginid=dlifebri&password=pass&type=tblappointment&id=206128&operation=e&note=This+is+a+note+from+the+native+sitter+app
-
-                <p>If you specify "tblappointment" for type, you can review any events associated with the visit when you click "Analyze" in the visit editor (when logged in as manager).  Events are listed at the end.
-
-        <h1>VISIT REPORTS</h1>
-
-            <p>More to come...
-            <h3>visit-report-list-ajax.php</h3>
-
-            <p> returns a list of visit reports for one client, requires a pre-existing session callable by manager (with clientid parameter supplied) or by client (client's session provides the clientid)
-            <h3>parameters</h3>
-
-            <ul>
-                <li>clientid (for manager UI use only)
-                <li>start - optional - YYYY-MM-DD
-                <li>end - optional - YYYY-MM-DD
-            </ul>
-
-            <h4>returns</h4>
-            <ul>
-                <li>JSON array 
-                <li>or {"error":"no reports found"} 
-                <li>or {"error":"session not active"} if expired session/no session/insufficient access rights
-                <li>see also: https://leashtime.co
-            </ul>
-            <h3>visit-report-data.php</h3>
-                <h4>returns</h4> 
-                <ul>
-                    <li>visit report data in JSON form for what may be a non-logged-in client
-                    <li>or {"error":"session not active"} if expired session/no session/insufficient access rights
-                    <li>can be called in three different modes
-                    <li>with a "nugget" if there is no session extant <br>e.g., https:/LeashTime.com/visit-report-data.php?nugget=jtFZXCCTeOeZ4kGwLcoAMkzTdRrf%2BP95
-                    <li>to generate a URL with a nugget in the context of a logged in manager, as in example above <br>e.g., https://leashtime.com/visit-report-data.php?id=207526&generate=1
-                    <li>with simply a visit id to get the data when a session is extant<br>e.g., https://leashtime.com/visit-report-data.php?id=207526
-                </ul>
-
-                <p>So... if you have a logged in client, passing in the id parameter is sufficient to retrieve the report JSON.
-
-                <p>If you have a nugget that was received, perhaps, as part of an email message, you can supply that nugget to visit-report-data.php and get the JSON that way.
-
-                <h4>The "generate" option is primarily for testing</h4>
-
-                <p>Here is a sample VR JSON array:
-
-                <ul>
-                    <li>BIZNAME "Dog's Life"
-                    <li>BIZSHORTNAME    "Dog's Life"
-                    <li>BIZEMAIL    "dogslife69@yahoo.com"
-                    <li>BIZHOMEPAGE "http://s179641890.onlinehome.us/test/dogslifehome.html"
-                    <li>BIZPHONE    "703 555 1212"
-                    <li>BIZADDRESS1 "123 Main Street "
-                    <li>BIZADDRESS2 "  "
-                    <li>BIZCITY " Vienna "
-                    <li>BIZSTATE    " VA "
-                    <li>BIZZIP  " 22180"
-                    <li>BIZLOGINPAGE    "http://leashtime.com/login-page.php?bizid=3"
-                    <li>CLIENTID    "2025"
-                    <li>CLIENTFNAME "Carly"
-                    <li>CLIENTLNAME "Carolina"
-                    <li>SITTERID    "2"
-                    <li>SITTER  "Ben Ball"
-                    <li>ARRIVED "2018-11-07 11:15:30"
-                    <li>COMPLETED   "2018-11-07 11:23:49"
-                    <li>MOODBUTTON  
-                    <li>cat "0"
-                    <li>happy   "1"
-                    <li>hungry  "0"
-                    <li>litter  "0"
-                    <li>pee "1"
-                    <li>play    "0"
-                    <li>poo "1"
-                    <li>sad "0"
-                    <li>shy "0"
-                    <li>sick    "0"
-                    <li>MAPROUTEURL "https://LeashTime.com/appointment-map.php?id=207526"
-                    <li>VISITPHOTOURL   "https://LeashTime.com/appointment-photo.php?id=207526"
-                    <li>NOTE    "Just a nice little trip around Capitol Hill. This is sample visit report with new template."
-                    <li>PETS    "Lilly"
-                    <li>PETSENGLISH "Lilly"
-                </ul>
-
-
-                <p>I augmented the <b>visit-report-data.php</b> script with nugget-flavored photo and map URLs.  See below.
-            <h3>visit-report-list-ajax.php</h3>
-
-                <ul>
-                    <li>returns a list of visit reports for one client
-                    <li>requires a pre-existing session
-                    <li>callable by manager (with clientid parameter supplied) or by client (client's session provides the clientid)
-                </ul>
-                <h4>parameters</h4>
-                <ul>
-                    <li>clientid (for manager UI use only)
-                    <li>start - optional - YYYY-MM-DD
-                    <li>end - optional - YYYY-MM-DD
-                    <li>returns JSON array 
-                    <li>or {"error":"no reports found"} 
-                    <li>or {"error":"session not active"} if expired session/no session/insufficient access rights
-                    <li>see also: https://leashtime.com/visit-report-list-test.phphttps://leashtime.com/visit-report-list-test.php
-                </ul>
-            <h3>visit-report-data.php</h3>
-
-            <p>returns visit report data in JSON form for what may be a non-logged-in client
-            or {"error":"session not active"} if expired session/no session/insufficient access rights
-            <p>can be called in three different modes
-            <p>with a "nugget" if there is no session extant
-
-            <p>e.g., https:/LeashTime.com/visit-report-data.php?nugget=jtFZXCCTeOeZ4kGwLcoAMkzTdRrf%2BP95
-            to generate a URL with a nugget in the context of a logged in manager, as in example above
-
-            e.g., https://leashtime.com/visit-report-data.php?id=207526&generate=1
-            with simply a visit id to get the data when a session is extant
-
-            e.g., https://leashtime.com/visit-report-data.php?id=207526
-
-
-            So... if you have a logged in client, passing in the id parameter is sufficient to retrieve the report JSON.
-
-            If you have a nugget that was received, perhaps, as part of an email message, you can supply that nugget to visit-report-data.php and get the JSON that way.
-
-            <p>The "generate" option is primarily for testing
-            <p>Notes on the VR JSON array
-            <ul>
-                <li>MAPROUTEURL  - should be used only when the client is logged in.
-                <li>VISITPHOTOURL  - should be used only when the client is logged in.
-                <li>MAPROUTENUGGETURL  - should be used only when the client is NOT logged in.
-                <li>VISITPHOTONUGGETURL  - should be used only when the client is NOT logged in.
-            </ul>
-            Here is a sample VR JSON array:
-            <ul> 
-                <li>BIZNAME "Dog's Life"
-                <li>BIZSHORTNAME    "Dog's Life"
-                <li>BIZEMAIL    "dogslife69@yahoo.com"
-                <li>BIZHOMEPAGE "http://s179641890.onlinehome.us/test/dogslifehome.html"
-                <li>BIZPHONE    "703 555 1212"
-                <li>BIZADDRESS1 "123 Main Street"
-                <li>BIZADDRESS2 ""
-                <li>BIZCITY "Vienna "
-                <li>BIZSTATE    "VA "
-                <li>BIZZIP  "22180"
-                <li>BIZLOGINPAGE    "http://leashtime.com/login-page.php?bizid=3"
-                <li>CLIENTID    "2025"
-                <li>CLIENTFNAME "Carly"
-                <li>CLIENTLNAME "Carolina"
-                <li>SITTERID    "2"
-                <li>SITTER  "B.B."
-                <li>ARRIVED "2018-11-07 11:15:30"
-                <li>COMPLETED   "2018-11-07 11:23:49"
-                <li>MOODBUTTON  
+    <div class="card panel">
+        <div class="card-head card-head-sm"><h2>Pet Sitter Requests</h2></div>
+            <div class="card-body small-padding">   
+                <h3>native-visit-update.php</h3>
                     <ul>
-                        <li>cat "0"
-                        <li>happy   "1"
-                        <li>hungry  "0"
-                        <li>litter  "0"
-                        <li>pee "1"
-                        <li>play    "0"
-                        <li>poo "1"
-                        <li>sad "0"
-                        <li>shy "0"
-                        <li>sick    "0"
+                        <li>Content-type: application/x-www-forme-urlencoded
+                        <li>loginid</li>
+                        <li>password</li>
+                        <li>datetime [YYYY-MM-dd HH:mm:ss]</li>
+                        <li>appointmentptr</li>
+                        <li>note</li>
+                        <li>{moodButton : BOOL, moodButton2 : BOOL...} [icons]</li>
                     </ul>
-                <li>MAPROUTEURL "https://LeashTime.com/appointment-map.php?id=207526"
-                <li>MAPROUTENUGGETURL   "https://LeashTime.com/appointment-map.php?nugget=jtFZXCCTeOeZ4kGwLcoAMkzTdRrf%2BP95"
-                <li>VISITPHOTOURL   "https://LeashTime.com/appointment-photo.php?id=207526"
-                <li>VISITPHOTONUGGETURL "https://LeashTime.com/appointment-photo.php?nugget=jtFZXCCTeOeZ4kGwLcoAMkzTdRrf%2BP95"
-                <li>NOTE    "Just a nice little trip around Capitol Hill. This is sample visit report with new template."
-                <li>PETS    "Lilly"
-                <li>PETSENGLISH "Lilly"
-            </ul>
-            <h3>client-own-schedule-change.php</h3>
-
-            <p>GET or POST supported.
-            <p>Supports cancel/uncancel/change operations on multiple visits across many days.
-            <p>Requires an active client session
-
-            <h4>Parameters</h4>
-
-            <ul>
-                <li>changetype: required cancel|uncancel|change
-                <li>groupnote: optional text
-                <li>visits: required JSON
-            </ul>
-            [{"id":<required visit id>, "note":<optional text>}, {"id":...}, ...]
-
-            <p>Returns JSON
-            <p>{"status":"ok", "requestid":request id}
-            <p>{"error":"no active session"}
-
-
-            <p>NOTES
-
-            <p>This script generates a new type of client request: schedulechange.  The editor for this request type is under construction.
-
-            <p>Besides allowing multiple visits across many days to be altered in one server call, this new request type preserves a record of the state of the visits at the time the request was created.  This will allow for review of pre-request states and preserve the state of visits which are later deleted.  The preserved details are:
-
-                <ul>
-                    <li>date
-                    <li>timeofday
-                    <li>servicecode
-                    <li>appointmentid
-                    <li>providerptr
-                    <li>note
-                    <li>adjustment
-                    <li>rate
-                    <li>bonus
-                </ul>
-
-            <p>When the schedule change has been built, I will write scripts that return (as JSON) client request history (for one client or all clients, for a date range, with a limit), and request details.
+            </div>
+        </div>
     </div>
 </div>
 
